<resources>
    <string name="app_name">E-HRSystem</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_email">Email</string>
    <string name="label_ID">Working ID</string>
    <string name="label_date">MM / DD / YYYY</string>


    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_vacations">Vacations</string>
    <string name="title_offers">Offers</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_console">Admin Console</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="vacation_prompt">Choose the type of vacation</string>
    <string-array name="vacation_arrays">
        <item>ٍSick</item>
        <item>ِAnnual</item>
        <item>Unpaid</item>
    </string-array>


</resources>